# Coursera-C-

./: README.md
2_week/Maximiser/: CMakeLists.txt
2_week/anagrams/: main.cpp
2_week/averageTemperature/: CMakeLists.txt  main.cpp
2_week/busStations/: main.cpp
2_week/buses1/: CMakeLists.txt
2_week/buses2/: main.cpp
2_week/capitalDict/: CMakeLists.txt
2_week/faq/: CMakeLists.txt
2_week/mapVals/: CMakeLists.txt
2_week/moveString/: CMakeLists.txt
2_week/palindrom/: main.cpp
2_week/palindromFilter/: main.cpp
2_week/reversed/: main.cpp
2_week/sinonyms/: CMakeLists.txt
2_week/uniqueStrings/: CMakeLists.txt
3_week/incognizable/: CMakeLists.txt  main.cpp
3_week/name2/: CMakeLists.txt  main.cpp
3_week/name3/: CMakeLists.txt
3_week/sortAbs/: CMakeLists.txt
3_week/sortStr/: main.cpp
3_week/sortedStrings/: CMakeLists.txt  main.cpp
4_week/ensureEquals/: main.cpp
4_week/function/: CMakeLists.txt
4_week/lectureTitle/: main.cpp
4_week/numbers/: CMakeLists.txt
4_week/streams/: CMakeLists.txt  main.cpp
4_week/table/: main.cpp
4_week/timeServer/: CMakeLists.txt
brown/ww5/DemographicStatsTest/: CMakeLists.txt  solutionB.cpp
red/finalProject/: CMakeLists.txt  main.cpp  search_server.cpp  (+2 more)
tools/: test_runner.h
yellow/dataBase/: CMakeLists.txt  condition_parser.cpp  condition_parser.h  database.cpp  database.h  date.cpp  date.h  date_comparison_node.cpp  date_comparison_node.h  empty_node.cpp  empty_node.h  event_comparison_node.cpp  event_comparison_node.h  logical_operation_node.cpp  logical_operation_node.h  main.cpp  node.h
(+310 files in other folders)
